fixed nav bar design alignment issues, and update redirect issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,5 @@
 body {
+    height: 100%;
     margin: 0px;
     padding: 0px;
     background-color: #FFFFFF;
@@ -9,12 +10,12 @@ body {
 .navbar {
     background-color: white;
     padding: 20px;
-    position: relative;
+    margin-right: -80px;
 }
 
 .navbar-brand {
     background-color: white;
-    padding: 20px;
+    padding: 0px;
 }
 
 .navbar-nav {
@@ -36,22 +37,24 @@ body {
     color: #1D385A;
     background-color: #F0F0F0;
     font-weight: bold;
+
 }
 
 .active a {
     color: #1D385A !important;
 }
 
+
 .sidenav {
     padding: 20px;
     width: 300px;
     height: 100%;
-    position: fixed;
     z-index: 1;
     background-color: #708296;
+    overflow: scroll;
     transition: 0.5s;
     margin-left: 15px;
-    overflow: auto;
+    position: fixed;
 }
 
 .sidenav a {
@@ -106,6 +109,9 @@ body {
     padding: 60px;
     margin-right: 15px;
     margin-top: 0px;
+    overflow: scroll;
+    position: fixed;
+    padding-bottom: 200px;
 }
 
 #card-container h3 {
@@ -128,11 +134,13 @@ body {
 }
 
 .box {
+
     height: 150px;
     background-color: #FFFFFF;
 }
 
 .box p {
+
     font-size: 35px;
     color: #1D385A;
     font-weight: bold;
@@ -144,10 +152,31 @@ body {
 }
 
 .box p span {
+
     margin-top: 40px;
     font-size: 22px;
     font-weight: bold;
     color: #1D385A;
     text-align: center;
     padding: 10px;
+}
+
+@media screen and (max-width: 768px) {
+    .content {
+        width: 100%;
+    }
+}
+
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+    .sidenav {
+        width: 200px;
+        height: 100%;
+    }
+
+    #card-container {
+        width: 600px;
+        height: 100%;
+        margin-left: 200px;
+
+    }
 }
